with show right answers

--- a/index.html
+++ b/index.html
@@ -7,72 +7,22 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="author" content="Dmitriy Davydov">
     <title>JS test</title>
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:300,400,700;subset=cyrillic">
+    <!-- <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:300,400,700;subset=cyrillic">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Montserrat:300,400,700&amp;subset=cyrillic">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css"> -->
 </head>
 
 <body>
-
-    <!-- header -->
-    <header class="section-header" id="section-header">
-
+<header class="section-header" id="section-header">
         <h2 class="section-header__logo">
             Application to test your JavaScript skills
         </h2>
-
     </header>
-    <!-- /header -->
 
-    <!-- main -->
     <form id="main-form">
-
     </form>
 
-
-    <form class="question-form">
-        <div class="question-form__question-text" id="question">
-            1. Question length about 70 symbols. Question length about 70 symbols.
-        </div>
-        <input type="radio" name="question-form__answer-checkbox" id="first-option-radio">
-        <span class="question-form__answer-text" id="first-option-text">First option</span><br>
-
-        <input type="radio" name="question-form__answer-checkbox" id="second-option-radio">
-        <span class="question-form__answer-text" id="second-option-text">Second option</span><br>
-
-        <input type="radio" name="question-form__answer-checkbox" id="third-option-radio">
-        <span class="question-form__answer-text" id="third-option-text">Third option</span><br>
-
-        <input type="radio" name="question-form__answer-checkbox" id="fourth-option-radio">
-        <span class="question-form__answer-text" id="fourth-option-text">Fourth option</span><br>
-
-        <button type="button" class="btn-main" value="Next" id="submit-btn">Next question</button><br><br>
-
-        <label id="progress-text">Progress:
-			<progress max="4" value="0" id="progress-value"></progress>
-		</label>
-
-    </form>
-
-    <!-- /main -->
-
-    <!-- footer -->
-    <footer class="section-footer" id="section-footer">
-
-        <div class="section-footer__logo">
-            Our test JS skills.
-        </div>
-        <ul class="section-footer__nav">
-            <li><a href="#">About us</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">FAQ</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Contact us</a></li>
-        </ul>
-
-    </footer>
-    <!-- /footer -->
     <script src="./js.js" defer></script>
 </body>
 
-</html>
+</html
