--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="author" content="Dmitriy Davydov">
     <title>JS test</title>
-    <!-- <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:300,400,700;subset=cyrillic">
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Montserrat:300,400,700&amp;subset=cyrillic">
-    <link rel="stylesheet" href="./css/styles.css"> -->
+
 </head>
 
 <body>
-<header class="section-header" id="section-header">
+    <header class="section-header" id="section-header">
         <h2 class="section-header__logo">
             Application to test your JavaScript skills
         </h2>
@@ -25,4 +23,4 @@
     <script src="./js.js" defer></script>
 </body>
 
-</html
+</html>
